# publication_data

./: 1.2_right_oblique_sphere.ipynb  1.3_four_elements_other subjects.ipynb  1.4_1.6_daily_rotation.ipynb  1.4_1.6_eighth_sphere_motion.ipynb  1.4_1.6_geotemporal_test_heavnes_motion-Copy1.ipynb  3.1_rising_setting.ipynb  3.1_scatter_plot_books_images_cks.ipynb  3.2_ascensions.ipynb  3.3_sun_days.ipynb  COMPREHENSIVE_FIGURE_MAPPING.md  DATA_PREPARATION_REPORT.md  README.md  Untitled1.ipynb  VT_1.1_sphere_definition.xlsx  add_bar_labels.py  all_elements_with_part_type.xlsx  all_parts_with_type.ipynb  app_components.py  append_chaps.py  append_graph2.py  append_graph4.py  append_graph5.py  append_q10.py  append_q10_part2.py  append_q4.py  append_q5.py  append_q6.py  append_q6_fix.py  append_q7_q8.py  append_q8_network.py  append_q8_part3.py  append_q8_part4.py  append_q9.py  append_q9_part2.py  append_to_notebook.py  book_format.csv  book_format.ipynb  books_per_printer.csv  books_per_publisher.csv  celestial_circles_geometrical_subjects.ipynb  (+59 more)
dissertation/: 1.4_motion_heavens_complete.ipynb  2.1_organize_visual_tags.ipynb  3.1_scatter_plot_books_images_cks.ipynb  3.2_scatter_plot.ipynb  3.3_scatter_plot_sun_days_cks.ipynb  SA_1.1_euclid_lathe.ipynb  SA_1.1_network_graph.ipynb  SA_1.2_a.netsted_spheres.ipynb  SA_1.2_b.right_oblique_sphere.ipynb  SA_1.2_nested_sphere_cooccurrence.ipynb  SA_1.3_addition.ipynb  SA_1.4.ipynb  SA_1.4_additions.ipynb  SA_1.5_additions.ipynb  SA_1.6_intersections.ipynb  SA_1.7.ipynb  SA_1.7_additions.ipynb  SA_1.8.ipynb  SA_1.8_additions.ipynb  (+65 more)
(+130 files in other folders)
