[project]
name = "publication-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bqplot>=0.13.1",
    "cartopy>=0.25.0",
    "geopandas>=1.1.3",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
]
